# meshengine

./: .clang-format  .gitignore  README.md  SConstruct  methods.py  version.py
core/: SCsub  core_bind.cpp  core_bind.h  core_builders.py  core_constants.cpp  core_constants.h  core_string_names.cpp  core_string_names.h  doc_data.cpp  doc_data.h  register_core_types.cpp  register_core_types.h  typedefs.h  version.h
drivers/: register_driver_types.cpp  register_driver_types.h
editor/: SCsub  action_map_editor.cpp  action_map_editor.h  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  array_property_edit.cpp  array_property_edit.h  audio_stream_preview.cpp  audio_stream_preview.h  code_editor.cpp  code_editor.h  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  dependency_editor.cpp  dependency_editor.h  dictionary_property_edit.cpp  dictionary_property_edit.h  doc_tools.cpp  doc_tools.h  editor_about.cpp  editor_about.h  editor_asset_installer.cpp  editor_asset_installer.h  editor_atlas_packer.cpp  editor_atlas_packer.h  editor_audio_buses.cpp  editor_audio_buses.h  editor_autoload_settings.cpp  editor_autoload_settings.h  editor_command_palette.cpp  editor_command_palette.h  editor_data.cpp  editor_data.h  editor_dir_dialog.cpp  (+122 more)
main/: main.cpp  main.h  main_timer_sync.cpp  main_timer_sync.h  performance.cpp  (+1 more)
platform/android/java/nativeSrcsConfigs/: AndroidManifest.xml  CMakeLists.txt  README.md
(+2620 files in other folders)
